--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
     "animate.css": "^4.1.1",
+    "animation.css": "^0.1.0",
     "axios": "^1.9.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "motion": "^12.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
